# lazygrad

./: README.md  pyproject.toml
notebooks/lms/: 001_build_bigram.ipynb
notebooks/nanograd/: 001_backprop.ipynb
src/micrograd/: value.py
