[tool.poetry]
name = "lazygrad"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "3.8.18"
torch = "^2.2.0"
torchvision = "^0.17.0"
torchaudio = "^2.2.0"
graphviz = "^0.20.1"


[tool.poetry.group.dev.dependencies]
ipykernel = "^6.29.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
